Fixed white space on the right side of the home page

--- a/src/app/styles/components/latestEvents.css
+++ b/src/app/styles/components/latestEvents.css
@@ -6,6 +6,7 @@ section.latestEvents {
     position: relative;
     width: 100%;
     padding: 1.4rem 0;
+    overflow: hidden;
 }
 
 section.latestEvents div#latestEventsSectionSpaced {
